# testTask_RTL

./: .env.dist  Dockerfile  README.md  alembic.ini  docker-compose.yml  llm_prompt.txt  pyproject.toml
scripts/: load_videos.py
src/app/: main.py
src/app/application/: exceptions.py
src/app/application/handlers/: __init__.py  nl2sql.py
src/app/application/ports/: __init__.py  llm_gateway.py  transaction_manager.py
src/app/bootstrap/: config.py  logging.py
src/app/bootstrap/ioc/: __init__.py  application_provider.py  context_provider.py  database_provider.py  infrastructure_provider.py
src/app/entities/: common.py  repository.py  video.py
src/app/infrastructure/adapters/: __init__.py  llm_gateway.py
src/app/infrastructure/persistence/adapters/: __init__.py  video.py
src/app/infrastructure/persistence/migrations/: env.py
src/app/infrastructure/persistence/migrations/versions/: 0393cd1416a7_added_video_and_video_snapshot_tables.py
src/app/infrastructure/persistence/tables/: __init__.py  video.py
src/app/presentation/bot/routes/: __init__.py  questions.py
