[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src", "scripts"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "testtask-RTL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "alembic>=1.17.2",
    "dishka>=1.7.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
lints = [
    "ruff>=0.14.8",
]

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"src/edu/infrastructure/persistence/migrations/env.py" = ["ERA001", "INP001", "E402"]
"src/edu/infrastructure/persistence/migrations/versions/**" = ["ALL"]
"tests/**" = ["S101"]

